# code-rs

./: .gitignore  Cargo.toml
s01_agent_loop/: Cargo.toml
s01_agent_loop/src/: main.rs
s02_tool_use/src/: main.rs
s02_tool_use/src/tool/: bash.rs  mod.rs  write_file.rs
s03_todo_write/src/: main.rs
s03_todo_write/src/tool/: todo.rs
s04_subagent/src/: lib.rs
s04_subagent/src/tool/: mod.rs  sub_agent.rs
